# ai-trainer-dashboard

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py  ws.py
apps/api/app/core/: config.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: contracts.py
apps/api/app/services/: dataset_service.py  education_service.py  inference_service.py  training_service.py
apps/web/: .eslintrc.cjs  Dockerfile  index.html  package.json  tsconfig.json
apps/web/src/: main.tsx
apps/web/src/api/: client.ts
apps/web/src/components/: SectionCard.tsx
apps/web/src/features/dashboard/: RealtimeChart.tsx  TrainingForm.tsx
apps/web/src/features/education/: EducationPanel.tsx
apps/web/src/features/experiments/: ExperimentTable.tsx
apps/web/src/features/inference/: InferencePanel.tsx
apps/web/src/hooks/: useTrainingSocket.ts
apps/web/src/styles/: global.css
apps/web/src/types/: index.ts
