[project]
name = "ai-trainer-api"
version = "0.1.0"
description = "Backend for Interactive AI Model Trainer Dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.31",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.1",
  "python-multipart>=0.0.9",
  "orjson>=3.10.6"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.1", "httpx>=0.27.0", "ruff>=0.5.5"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
